--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "eleme-openapi-php-sdk",
-  "description": "php snowflake implment",
+  "description": "eleme-openapi-php-sdk",
   "license": "MIT",
   "keywords": [
     "eleme"
