--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "eleme/openapi-php-sdk",
+  "name": "eleme-openapi/php-sdk",
   "description": "eleme-openapi-php-sdk",
   "license": "MIT",
   "keywords": [
