--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": [
     "eleme"
   ],
-  "version": "1.0.2",
+  "version": "1.0.3",
   "authors": [
     {
       "name": "tangyan",
@@ -13,6 +13,10 @@
     }
   ],
   "require": {
-    "php": ">=5.3.0"
+    "php": ">=5.3.0",
+    "monolog/monolog" : "1.22.*"
+  },
+  "autoload": {
+    "files": ["library/include.php"]
   }
 }
