--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,6 @@
     }
   ],
   "require": {
-    "php": ">=5.3.0",
-    "monolog/monolog" : "1.22.*"
-  },
-  "autoload": {
-    "files": ["library/include.php"]
+    "php": ">=5.3.0"
   }
 }
