--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
     }
   ],
   "require": {
-    "php": ">=5.3.0"
+      "php": ">=5.3.0"
+  }
+  "autoload": {
+    "psr-4": {
+      "ElemeOpenApiSdk\\": "library/",
+    }
   }
 }
