--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
   ],
   "require": {
       "php": ">=5.3.0"
-  }
+  },
   "autoload": {
     "psr-4": {
-      "ElemeOpenApiSdk\\": "library/",
+      "ElemeOpenApiSdk\\": "library/"
     }
   }
 }
