--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
   "require": {
       "php": ">=5.3.0"
   },
-  "autoload": {
-    "psr-4": {
-      "ElemeOpenApiSdk\\": "library/"
-    }
+  "autoload":{
+      "files":["library/include.php"];
   }
 }
