--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
       "php": ">=5.3.0"
   },
   "autoload":{
-      "files":["library/include.php"];
+      "files":["library/include.php"]
   }
 }
