--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-  "name": "eleme-openapi/php-sdk",
+  "name": "eleme-openapi/eleme-openapi-sdk",
   "description": "eleme-openapi-php-sdk",
   "license": "MIT",
   "keywords": [
     "eleme"
   ],
-  "version": "1.1.0",
+  "version": "1.1.1",
   "authors": [
     {
       "name": "tangyan",
-      "email": "tangyan1412@foxmail.com"
+      "email": "open.shop@ele.me"
     }
   ],
   "require": {
